cleaned up long url issues and overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,13 @@
 /* color scheme */
+a {
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	word-break: break-all;
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
+}
 
 #tasks {
 	background-color: #f4848a;
@@ -40,7 +49,7 @@ body {
 	justify-content: center;
 	flex-wrap: wrap;
 	margin: auto;
-	max-width: 800px;
+	max-width: 900px;
 }
 
 .leftCol {
@@ -58,7 +67,7 @@ body {
 .rightCol {
 	display: flex;
 	flex-direction: column;
-	max-width: 600px;
+	max-width: 700px;
 	min-width: 350px;
 	margin-top: 0.5em;
 	flex-basis: 70%;
@@ -78,6 +87,8 @@ body {
 .friendArticleContainer {
 	display: flex;
 	align-self: flex-end;
+	align-items: flex-end;
+	justify-content: flex-end;
 }
 
 .profileImg {
@@ -652,4 +663,22 @@ fieldset {
 h5 {
 	font-size: 1.3em;
 	margin: 0.5em 0em 0em 0em;
+}
+
+.dont-break-out {
+	/* These are technically the same, but use both */
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+
+	-ms-word-break: break-all;
+	/* This is the dangerous one in WebKit, as it breaks things wherever */
+	word-break: break-all;
+	/* Instead use this non-standard one: */
+	word-break: break-word;
+
+	/* Adds a hyphen where the word breaks, if supported (No Blink) */
+	-ms-hyphens: auto;
+	-moz-hyphens: auto;
+	-webkit-hyphens: auto;
+	hyphens: auto;
 }
